# DependencyBatch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPER_GUIDE.md  README.md  SOURCES.md  USER_GUIDE.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dependency_batch/: __init__.py
docs/: developer_guide.md  index.md  reusable_prompts.md  session_instructions.md  tooling_evaluation.md  user_guide.md
model/: __init__.py
plans/: modernization.md
prompts/: initialization.md
reports/: modernization_report.md
src/dependency_batch/: __init__.py
tests/: conftest.py  test_dependency_batch.py  test_e2e.py  test_model.py
