[project]
name = "dependency_batch"
version = "0.1.0"
description = "A job queue model library"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "hypothesis",
    "ruff",
    "pyright"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
