[project]
name = "dependency_batch"
version = "0.1.0"
description = "A job queue model library"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "hypothesis",
    "ruff",
    "pyright",
    "pytest-cov"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=dependency_batch --cov-report=term-missing --cov-fail-under=100"
testpaths = [
    "tests",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
