[project]
name = "dependency_batch"
version = "0.1.0"
description = "A job queue model library"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "mdformat>=0.7.0",
    "mdformat-gfm>=0.3.5",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pre-commit>=3.5.0",
    "codespell>=2.4.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=dependency_batch --cov-report=term-missing --cov-fail-under=100"
testpaths = [
    "tests",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
